--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
         <div class="container">
             <div>
                 <h1>todos</h1>
-                <form action="/edit/<%= foundTodo._id %>?_method=put" method="post">
+                <form action="/edit/<%= foundTodo._id %>" method="post">
                     <input name="todo" value="<%= foundTodo.todo %>" type="text" required>
                 </form>
             </div>
