--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
                             <form class="todo-form" action="/edit/<%= todo._id %>" method="get">
                                 <button type="submit"><i class="fa-solid fa-pen-to-square"></i></button>
                             </form>
-                            <form class="todo-form" action="/delete/<%= todo._id %>?_method=delete" method="post">
+                            <form class="todo-form" action="/delete/<%= todo._id %>" method="post">
                                 <button type="submit"><i class="fa-solid fa-trash"></i></button>
                             </form>
                         </li>
